2024-01-08T01:10:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7441985058 # 3
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 838 1535 / 843 1541
* notice: next accum: outdated-unq outdated-all / unq all: 839 1536 / 843 1541
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-25] / []

2024-01-07T16:18:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7439359710 # 2
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 838 1535 / 842 1540
* notice: next accum: outdated-unq outdated-all / unq all: 838 1535 / 843 1541
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-07]

2024-01-07T08:18:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7437029741 # 1
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 832 1525 / 840 1537
* notice: next accum: outdated-unq outdated-all / unq all: 838 1535 / 842 1540
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-12-17 2023-12-18 2023-12-19 2023-12-20 2023-12-21 2023-12-24] / [2024-01-01 2024-01-05]

2023-12-31T16:11:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7371484834 # 2224