@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-08T01:10:31Z",
+  "timestamp" : "2024-01-08T08:20:38Z",
   "count_outdated" : 1536,
   "uniques_outdated" : 839,
-  "count" : 1541,
-  "uniques" : 843,
+  "count" : 1542,
+  "uniques" : 844,
   "clones" : [
     {
       "timestamp": "2023-12-31T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-01-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
