@@ -1,3 +1,12 @@
+2024-01-08T08:20:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7444826861 # 4
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
+* notice: last 14d: unq all: 3 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 839 1536 / 843 1541
+* notice: next accum: outdated-unq outdated-all / unq all: 839 1536 / 844 1542
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-08]
+
 2024-01-08T01:10:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7441985058 # 3
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
